--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="div1">Hi from refer app this is a dumy project</div>
+    <div id="div1">Hi from refer app this is a dummy project</div>
   </body>
 </html>
